--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.0
 dj-database-url==2.3.0
 Django==5.1.4
 django-bootstrap5==25.1
+django-decouple==2.1
 django-environ==0.11.2
 environs==11.2.1
 gunicorn==23.0.0
