--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==5.1.4
 django-bootstrap5==25.1
 django-decouple==2.1
 django-environ==0.11.2
+djangorestframework==3.16.0
 environs==11.2.1
 gunicorn==23.0.0
 idna==3.10
