--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.8.1
+black==25.12.0
 certifi==2024.12.14
 charset-normalizer==3.4.0
+click==8.3.1
+colorama==0.4.6
 dj-database-url==2.3.0
 Django==5.1.4
 django-bootstrap5==25.1
@@ -8,13 +11,21 @@ django-decouple==2.1
 django-environ==0.11.2
 djangorestframework==3.16.0
 environs==11.2.1
+flake8==7.3.0
 gunicorn==23.0.0
 idna==3.10
 marshmallow==3.23.1
+mccabe==0.7.0
+mypy_extensions==1.1.0
 packaging==24.2
+pathspec==1.0.0
 pillow==11.1.0
+platformdirs==4.5.1
 psycopg2-binary==2.9.10
+pycodestyle==2.14.0
+pyflakes==3.4.0
 python-dotenv==1.0.1
+pytokens==0.3.0
 requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
