--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ environs==11.2.1
 flake8==7.3.0
 gunicorn==23.0.0
 idna==3.10
+iniconfig==2.3.0
 marshmallow==3.23.1
 mccabe==0.7.0
 mypy_extensions==1.1.0
@@ -21,9 +22,13 @@ packaging==24.2
 pathspec==1.0.0
 pillow==11.1.0
 platformdirs==4.5.1
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pycodestyle==2.14.0
 pyflakes==3.4.0
+Pygments==2.19.2
+pytest==9.0.2
+pytest-django==4.11.1
 python-dotenv==1.0.1
 pytokens==0.3.0
 requests==2.32.3
