--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=cocktail_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      # CHANGE THESE 3 LINES:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
 
 volumes:
   postgres_data:
